--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+# 在开发环境中关闭thymeleaf的缓存
+spring.thymeleaf.cache=false
 
+
+# 连接数据库
+spring.datasource.url=jdbc:mysql://114.115.142.227/db_app
+spring.datasource.username=mizhiniurou
+spring.datasource.password=gakkigakki
+sprint.datasource.driver=com.mysql.cj.jdbc.Driver
+
+#
