--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.4</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Log4J2: Logging Library -->
