--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.datasource.username=mizhiniurou
 spring.datasource.password=gakkigakki
 sprint.datasource.driver=com.mysql.cj.jdbc.Driver
 
-#
+#spring.mvc.static-path-pattern=/resources/**
