--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=gakkigakki
 sprint.datasource.driver=com.mysql.cj.jdbc.Driver
 
 #spring.mvc.static-path-pattern=/resources/**
+
+server.port = 80
