--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,4 @@
 language: java
-
+before_install:
+- openssl aes-256-cbc -K $encrypted_ed0537d0fcc2_key -iv $encrypted_ed0537d0fcc2_iv
+  -in id_rsa.enc -out ~\/.ssh/id_rsa -d
