--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,9 @@ addons:
     ssh_known_hosts: 114.115.142.227
 
 before_install:
-- openssl aes-256-cbc -K $encrypted_ed0537d0fcc2_key -iv $encrypted_ed0537d0fcc2_iv
-  -in id_rsa.enc -out ~/.ssh/id_rsa -d
+  - openssl aes-256-cbc -K $encrypted_ed0537d0fcc2_key -iv $encrypted_ed0537d0fcc2_iv
+    -in id_rsa.enc -out ~/.ssh/id_rsa -d
+  - chmod 600 ~/.ssh/id_rsa
 
 after_success:
   - ssh root@114.115.142.227 "cd ~/phyweb/ && git pull && bash deploy.sh"
