--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ sprint.datasource.driver=com.mysql.cj.jdbc.Driver
 #spring.mvc.static-path-pattern=/resources/**
 
 server.port = 80
+
+
+# ½Å±¾Â·¾¶
+phyweb.baseDir=C:\\Desktop\\phyweb
+phyweb.scriptsPath=files\\scripts
+
