finish report pef generating

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ sprint.datasource.driver=com.mysql.cj.jdbc.Driver
 #spring.mvc.static-path-pattern=/resources/**
 
 server.port = 80
-
+debug = true
 
 # ½Å±¾Â·¾¶
-phyweb.baseDir=C:\\Desktop\\phyweb
-phyweb.scriptsPath=files\\scripts
+phyweb.baseDir=C://Desktop/phyweb
+phyweb.scriptsPath=${phyweb.basedir}/files/scripts
 
