--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,12 +8,14 @@ spring.datasource.username=mizhiniurou
 spring.datasource.password=gakkigakki
 sprint.datasource.driver=com.mysql.cj.jdbc.Driver
 
-#spring.mvc.static-path-pattern=/resources/**
 
 server.port = 80
 debug = true
 
 # ½Å±¾Â·¾¶
-phyweb.baseDir=C://Desktop/phyweb
+phyweb.baseDir=C:/Desktop/phyweb
 phyweb.scriptsPath=${phyweb.basedir}/files/scripts
 
+
+#spring.mvc.static-path-pattern=/resources/**
+spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:${phyweb.scriptsPath}
