--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ server.port = 80
 debug = true
 
 # ½Å±¾Â·¾¶
-phyweb.baseDir=C:/Desktop/phyweb
+phyweb.baseDir=/root/phyweb
 phyweb.scriptsPath=${phyweb.basedir}/files/scripts
 
 
