--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,13 @@
             <artifactId>log4j-core</artifactId>
             <version>2.11.2</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.11</version>
+        </dependency>
         <!--&lt;!&ndash; Jackson: A json parse library &ndash;&gt;-->
         <!--<dependency>-->
             <!--<groupId>com.fasterxml.jackson.core</groupId>-->
