修改实验报告生成逻辑

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-# ÔÚ¿ª·¢»·¾³ÖÐ¹Ø±ÕthymeleafµÄ»º´æ
+# ï¿½Ú¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ð¹Ø±ï¿½thymeleafï¿½Ä»ï¿½ï¿½ï¿½
 spring.thymeleaf.cache=false
 
 
-# Á¬½ÓÊý¾Ý¿â
+# ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ý¿ï¿½
 spring.datasource.url=jdbc:mysql://114.115.142.227/db_app
 spring.datasource.username=mizhiniurou
 spring.datasource.password=gakkigakki
@@ -11,10 +11,6 @@ sprint.datasource.driver=com.mysql.cj.jdbc.Driver
 
 server.port = 80
 debug = true
-
-# ½Å±¾Â·¾¶
-phyweb.baseDir=/root/phyweb
-phyweb.scriptsPath=${phyweb.basedir}/files/scripts
 
 
 #spring.mvc.static-path-pattern=/resources/**
