--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,4 @@ sprint.datasource.driver=com.mysql.cj.jdbc.Driver
 server.port = 80
 debug = true
 
-
-spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:${phyweb.scriptsPath}
+spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources
