加入文件访问路径

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ sprint.datasource.driver=com.mysql.cj.jdbc.Driver
 
 
 server.port = 80
-debug = true
 
-spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources
+resources_path = /root/phyweb/target/classes/static/script/pdf/
+
+spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:${resources_path}
