--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,6 @@ server.port = 80
 
 resources_path = /root/phyweb/target/classes/static/script/pdf/
 
+debug = true
+
 spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:${resources_path}
