--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,8 @@ sprint.datasource.driver=com.mysql.cj.jdbc.Driver
 
 
 server.port = 80
-
-resources_path = /root/phyweb/target/classes/static/script/pdf/
-
+phyweb.basedir=/root/phyweb
+phyweb.script=${phyweb.basedir}/target/static/script/pdf
 debug = true
 
-spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:${resources_path}
+spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:${phyweb.scriptsPath}
