再次修正路径

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,7 @@ sprint.datasource.driver=com.mysql.cj.jdbc.Driver
 
 
 server.port = 80
-phyweb.basedir=/root/phyweb
-phyweb.script=${phyweb.basedir}/target/static/script/pdf
 debug = true
 
-spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:${phyweb.scriptsPath}
+
+spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,files:classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources
