--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,7 @@ sprint.datasource.driver=com.mysql.cj.jdbc.Driver
 server.port = 80
 debug = true
 
+phyweb.basedir=/root/phyweb
+phyweb.script=${phyweb.basedir}/target/classes/static/script/pdf
 
-spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,files:classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources
+spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,files:${phyweb.script}
