--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ phyweb.basedir=/root/phyweb
 phyweb.script=${phyweb.basedir}/target/classes/static/script/pdf
 
 spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,files:${phyweb.script}
+spring.mvc.static-path-pattern=/static/**
