--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ sprint.datasource.driver=com.mysql.cj.jdbc.Driver
 
 server.port = 80
 debug = true
+
+spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,files:classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources
