--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,6 @@ sprint.datasource.driver=com.mysql.cj.jdbc.Driver
 server.port = 80
 debug = true
 
-spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,files:classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources
+file.absolute.path=/root/phyweb/target/classes/static/script/pdf
+
+spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:${file.absolute.path}
