--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.thymeleaf.cache=false
 
 
-spring.datasource.url=jdbc:mysql://114.115.142.227/db_app
+spring.datasource.url=jdbc:mysql://114.115.142.227/db_app?characterEncoding=UTF-8
 spring.datasource.username=mizhiniurou
 spring.datasource.password=gakkigakki
 sprint.datasource.driver=com.mysql.cj.jdbc.Driver
