忘记密码之重置密码

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,14 @@ debug = true
 file.absolute.path=/root/phyweb/target/classes/static/script/pdf
 
 spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources,file:${file.absolute.path}
+
+#” º˛≈‰÷√
+spring.mail.host=smtp.qq.com
+spring.mail.username=asdfghpeter@foxmail.com
+spring.mail.password=clcbkwvclxtobffi
+spring.mail.default-encoding=UTF-8
+spring.mail.properties.mail.smtp.sll.enable=true
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.port=587
