--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,10 @@
             <artifactId>log4j-core</artifactId>
             <version>2.11.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
