--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,12 @@
             <version>21.0</version>
         </dependency>
 
+        <!-- Gson: json string and java object converting support -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
     </dependencies>
 
     <build>
